log active connection count

--- a/YouNewThat/appsettings.json
+++ b/YouNewThat/appsettings.json
@@ -2,5 +2,9 @@
     "port": 5001,
     //; separated
     "allowedClients": "",
-    "keyPassword": ""
+    "keyPassword": "",
+    // 16K
+    "upPumpSize": 16384,
+    // 0.5M
+    "downPumpSize": 524288
 }
