--- a/YouNewThis/appsettings.json
+++ b/YouNewThis/appsettings.json
@@ -2,5 +2,9 @@
     "localPort": 5000,
     "server": "127.0.0.1",
     "serverPort": 5001,
-    "keyPassword": ""
+    "keyPassword": "",
+    // 16K
+    "upPumpSize": 16384,
+    // 0.5M
+    "downPumpSize": 524288
 }
