--- a/YouNewAll/YouNewAll.csproj
+++ b/YouNewAll/YouNewAll.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.6" />
     <PackageReference Include="System.Buffers" Version="4.5.1" />
   </ItemGroup>
 
