--- a/YouNewThat/appsettings.json
+++ b/YouNewThat/appsettings.json
@@ -2,9 +2,5 @@
     "port": 5001,
     //; separated
     "allowedClients": "",
-    "keyPassword": "",
-    // 16K
-    "upPumpSize": 16384,
-    // 0.5M
-    "downPumpSize": 524288
+    "keyPassword": ""
 }
