--- a/YouNew.AndroidApp/YouNew.AndroidApp.csproj
+++ b/YouNew.AndroidApp/YouNew.AndroidApp.csproj
@@ -106,6 +106,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_start_proxy.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\set_password.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
