Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,8 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo $(one)
-  displayName: 'Run a one-line script'
+- script: echo $(version)
+  displayName: 'print variable'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
